--- a/vignettes/activePathways-vignette.Rmd
+++ b/vignettes/activePathways-vignette.Rmd
@@ -18,15 +18,14 @@ options(max.print=35)
 ```
 
 # Introduction
-ActivePathways is a tool for multivariate pathway enrichment analysis. Pathway enrichment analysis identifies gene sets, such as pathways or Gene Ontology terms, that are over-represented in a list of genes of interest. ActivePathways implements an algorithm to perform pathway enrichment analysis on a data set that contains multiple variables for each gene. For example, the data may contain the confidence that the gene is a driver as reported by several tools, or it may contain differential expression values across different genetic regions such as coding regions and promoter regions.
+ActivePathways is a tool for multivariate pathway enrichment analysis. Pathway enrichment analysis identifies pathways, such as Gene Ontology terms, that are over-represented in a list of genes of interest. ActivePathways implements an algorithm to perform pathway enrichment analysis on a data set that contains multiple variables for each gene. For example, the data may contain the confidence that the gene is a driver as reported by several tools, or it may contain evidence from differential expression analysis across tissues.
 
-## Pathway Enrichment and The Ordered Hypergeometric algorithm
+## Pathway Enrichment and The Ordered Hypergeometric Algorithm
 
-From a matrix of p-values, `ActivePathways` creates a gene list query by merging the values to determine a single score for each gene, then filtering and sorting this list of p-values. This creates a list of genes - which we'll creatively call the `genelist` - ordered most significant first. `ActivePathways` tests if a pathway is 'enriched', or over-represented in our gene list, by performing a hypergeometric test (aka a Fisher's exact test) on the `genelist` and the genes annotated to the pathway. But rather than testing the entire `genelist`, `ActivePathways` performs incremental enrichment analysis with an increasingly larger subset of `genelist` starting at the top of the list, and takes the subset of `genelist` that yields the smallest p-value. This approach is useful when the genes in our `genelist` are of varying biological importance as it identifies the genes most relevant to the enrichment of the pathway.
-
+From a matrix of p-values, `ActivePathways` creates a gene list query by merging the p-values to determine a single p-value for each gene, then filtering and sorting this list of p-values. This creates a list of genes ordered by statistical significance. `ActivePathways` tests if a pathway is 'enriched', or over-represented in our gene list, by performing a hypergeometric test on the gene list and the genes annotated to the pathway. However, rather than testing the entire gene list, `ActivePathways` performs incremental enrichment analysis with an increasingly larger subset of the gene list starting at the top of the list, and identifies the subset of gene list that yields the smallest p-value. This approach is useful when the genes in the gene list are of varying biological importance as it identifies the genes most relevant to the enrichment of the pathway.
 
 # Tutorial
-In this vignette we will be looking at a basic use case. Our data is a small subset of genes and driver scores, representing the confidence that the gene is a driver in Adenocarcinoma cancers. Driver scores are given separately for different genetic elements; untranslated regions, coding regions, and promoters. For our gene sets, we'll be using a small subset of the Reactome database in the form of a GMT [(Gene Matrix Transposed)](https://software.broadinstitute.org/cancer/software/gsea/wiki/index.php/Data_formats#GMT:_Gene_Matrix_Transposed_file_format_.28.2A.gmt.29) file. GMT files can be downloaded from the [g:ProfileR server](https://biit.cs.ut.ee/gprofiler/gost). Click on Data sources, select database preferences and download the `name.gmt` file.
+The following example uses a dataset which contains a small subset of driver genes in a cohort of adenocarcinomas. The driver scores are p-values which represent the confidence that a given gene is a driver. Driver scores are given separately for different genetic elements: untranslated regions, coding regions, and promoters. The GMT file, representing a set of pathways, are a small subset of the pathways curated by the Reactome database [Gene Matrix Transposed](https://software.broadinstitute.org/cancer/software/gsea/wiki/index.php/Data_formats#GMT:_Gene_Matrix_Transposed_file_format_.28.2A.gmt.29) file. Broadly, GMT files can be downloaded from the [g:ProfileR server](https://biit.cs.ut.ee/gprofiler/gost). Click on Data sources, select database preferences and download the `name.gmt` file.
 
 ![](gmt_download.jpg)
 
@@ -37,7 +36,7 @@ scores <- as.matrix(scores)
 scores
 ```
 
-Additionally, `ActivePathways` will not allow any missing values. If there are missing values in the data they will have to somehow be removed. One possibility is to remove any rows that contain a missing value. Alternatively you can treat missing values as a p-value of 1, meaning we are confident the gene isn't a driver.
+Additionally, `ActivePathways` will not allow any missing values. Rows containing missing values may be removed. Alternatively, as conducted in this example, missing values will be assigned a value of 1, indicating that the element is not a driver.
 
 ```{r}
 scores[is.na(scores)] <- 1
@@ -45,7 +44,7 @@ scores[is.na(scores)] <- 1
 
 
 ## Basic Use
-The `ActivePathways` function can be very simple to use. There are several parameters, but only two are required. The first is the data matrix, which we prepared above. The second is a path to the GMT file.
+The `ActivePathways` function requires two inputs.The first is the data matrix of p-values. The second is the path to the GMT file.
 
 ```{r}
 library(ActivePathways)
@@ -54,18 +53,18 @@ ActivePathways(scores, gmt.file)
 ```
 
 ## Significance Threshold and Returning All Results
-A pathway is considered to be significantly enriched if it has `p.val <= significant`. The `significant` option represents the maximum p-value for a result to be considered statistically significant. By default, only the significant pathways are returned. If you want all pathways to be returned, you can use the `return.all` option. 
+A pathway is considered to be significantly enriched if the associated p-value is less than the significance threshold (i.e. `p.val <= significant`). The `significant` parameter represents the maximum p-value for a result to be considered statistically significant. By default, only the significant pathways are returned. If all results are desired, the user can set the `return.all` parameter to `TRUE`.
 
 ```{r}
 nrow(ActivePathways(scores, gmt.file, return.all=FALSE, significant=0.05))
 nrow(ActivePathways(scores, gmt.file, return.all=FALSE, significant=0.1))
 nrow(ActivePathways(scores, gmt.file, return.all=TRUE, significant=0.05))
 ```
-Note that while setting `significant=1` gives the same result as `return.all=TRUE`, it is strongly recommended to use the latter because the results written to `cytoscape.file.dir` use the `significant` value to determine which pathways to include in the network. Thus `ActivePathways(scores, gmt.file, return.all=TRUE, cytoscape.file.dir='/results/directory/')` and `ActivePathways(scores, gmt.file, significant=1, cytoscape.file.dir='/results/directory/)` will return the same result table but will create very different enrichment maps.
-
+Note that while setting `significant=1` gives the same result as `return.all=TRUE`, it is strongly recommended the latter is used because the results written to `cytoscape.file.dir` use the `significant` value to determine which pathways to include in the network. Thus `ActivePathways(scores, gmt.file, return.all=TRUE, cytoscape.file.dir='/results/directory/')` and `ActivePathways(scores, gmt.file, significant=1, cytoscape.file.dir='/results/directory/)` will return the same result table but will write different results files.
 
 ## GMT objects
-While you can just give the location of the GMT file to `ActivePathways`, in some cases you might want to look at this GMT or filter it first. For this reason the ActivePathways package includes an interface for working with GMT objects. You can read the GMT object with the `read.GMT` function. The GMT is structured as a list of terms, where each term is a list containing an id, a name, and a list of genes
+While the location of the GMT file to `ActivePathways` can be directly specified, in some cases the user may desire to examine the GMT file interactively. The ActivePathways package includes an interface for working with GMT objects. The GMT file can be read into R as a GMT object with the `read.GMT` function. The GMT is structured as a list of terms, where each term is a list containing an id, a name, and a list of genes.
+
 ```{r}
 gmt <- read.GMT(gmt.file)
 names(gmt[[1]])
@@ -80,36 +79,39 @@ gmt[[1]]$genes
 gmt$`REAC:2424491`$name
 ```
 
-A common filter to apply to the GMT is to remove gene sets that are too large or small in order to remove pathways that are overly general or specific. We'll remove any pathways that have less than 10 or more than 500 genes annotated to them.
+GMT files can be filtered for size to remove large and small pathways which are overly generic or specific. Here, pathways that have less than 10 or more than 500 genes are removed.
+
 ```{r}
 gmt <- Filter(function(term) length(term$genes) >= 10, gmt)
 gmt <- Filter(function(term) length(term$genes) <= 500, gmt)
 ```
-This filtering can also be done automatically using the `geneset.filter` option to the `ActivePathways` function. By default `ActivePathways` removes any gene sets with less than 5 or more than 1000 annotated genes. Our stricter filter can be applied inside `ActivePathways` using the option `geneset.filter=c(10, 500)`
 
-The new GMT object can now be used for analysis with `ActivePathways`
-```{r}
-ActivePathways(scores, gmt)
-```
-
-You can also save this GMT object to a file so that you don't have to repeat this process next time
+This GMT object can be written to a file.
 ```{r, eval=FALSE}
 write.GMT(gmt, 'hsapiens_REAC_subset_filtered.gmt')
 ```
 
+This filtering can also be done automatically using the `geneset.filter` parameter in the `ActivePathways` function by specifying a vector of length 2 containing the minimum and maximum pathway size desired by the user. For example, the above task can be completed by setting `geneset.filter=c(10, 500)`. By default `ActivePathways` removes any pathways with less than 5 or more than 1000 annotated genes.
+
+The new GMT object can now be used for analysis with `ActivePathways`.
+```{r}
+ActivePathways(scores, gmt)
+```
 
 ## Backgrounds
-To perform pathway enrichment analysis a set of genes is needed to act as a statistical background. You can think of this background as a universe of all genes that we're interested in. By default, the background is every gene found at least once in the GMT, but you can supply your own as a character vector. You might find it helpful to start with the list of all genes in the GMT, which you can get with the `makeBackground` function. For example, let's say we're interested in every gene except for TP53. This gene can be removed from the background and the new background used for our analysis.
+To perform pathway enrichment analysis, `ActivePathways` uses a set of genes as a statistical background. By default, the `background` is every gene found at least once in the GMT, but it can also be specified by the user by supplying a vector of genes to the  `background` parameter in `ActivePathways`. For example, if the analysis is conducted on a set of genes captured by a panel, then the user may wish to limit the `background` to the genes whose characteristics can be measured. 
+
+The list of genes in the GMT can be extracted with the `makeBackground` function (automatically performed by `ActivePathways`). In this example, let's try excluding the gene *TP53*. This gene can be removed from the background and the new background can be used for the analysis.
+
 ```{r}
 background <- makeBackground(gmt)
 background <- background[background != 'TP53']
 ActivePathways(scores, gmt.file, background=background)
 ```
-Note that only genes found in the background are used for testing enrichment. Any genes in the input data that aren't in the background will be automatically removed by `ActivePathways`.
-
+Note that only genes found in the background are used for testing enrichment. Any genes in the input data that are not in the background will be automatically removed by `ActivePathways`.
 
 ## Merging p-values
-Our input file consisted of multiple scores for each gene, but in order to perform pathway enrichment analysis each gene needs to have a single score. `ActivePathways` accomplishes this by merging the p-values for each gene into a single combined score. The two main methods to merge p-values are Brown's method (the default) and Fisher's method, but other methods are also available. You can preview the merged p-values using the `merge_p_values` function.
+`ActivePathways` integrates evidence from each source of evidence by merging the p-values for each gene into a single combined score. The two main methods to merge p-values are Brown's method (the default, which assumes correlation between difference sources of evidence) and Fisher's method (which assumes independence), but other methods are also available. 
 
 ```{r}
 scores
@@ -117,7 +119,7 @@ merge_p_values(scores, 'Fisher')
 merge_p_values(scores, 'Brown')
 ```
 
-You can also use this function to combine some of the data before hand. For example, we can merge the `X3UTR`, `X5UTR`, and `promCore` columns into a single `non_coding` column. This will consider the three non-coding regions as a single column, rather than giving them all equal weight to the `CDS` column.
+The user can independently calculate merged p-values using the `merge_p_values` function. For example, the `X3UTR`, `X5UTR`, and `promCore` columns can be merged into a single `non_coding` column. This will consider the three non-coding regions as a single column, rather than giving them all equal weight as the `CDS` column.
 
 ```{r}
 scores2 <- cbind(scores[, 'CDS'], merge_p_values(scores[, c('X3UTR', 'X5UTR', 'promCore')], 'Brown'))
@@ -129,36 +131,37 @@ ActivePathways(scores, gmt.file)
 ActivePathways(scores2, gmt.file)
 ```
 
-
 ## Cutoff
-In addition to removing any genes not found in the background, `ActivePathways` also removes any genes that have a high p-value after merging the scores. This threshold represents the maximum p-value for a gene to be considered of interest in our analysis. The threshold is `0.1` by default, but can be changed using the `cutoff` option.
+In addition to removing any genes not found in the background, `ActivePathways` also removes any genes that have a p-value higher than the `cutoff` parameter after merging the scores. This threshold represents the maximum p-value for a gene to be considered of interest in our analysis. The `cutoff` is `0.1` by default.
 
-
-## p-value adjustment
-To avoid inflated p-values that arise from multiple testing, p-values are adjusted after running enrichment analysis on each pathway. `ActivePathways` uses the base R `p.adjust` function to adjust p-values, so all of those methods are available. By default, 'holm' correction is used. You can also use `correction.method='none'` to not perform any p-value adjustment at all.
-
+## P-value Adjustment
+To avoid inflated p-values that arise from multiple testing, p-values are adjusted after running enrichment analysis on each pathway. `ActivePathways` uses the base R `p.adjust` function to adjust p-values. Thus, all statistical methods performed by `p.adjust` can be used in `ActivePathways` by altering the `correction.method` parameter. By default, the `holm` correction method is used. Setting `correction.method='none'` will instruct the software to avoid p-value adjustment.
 
 # The Results Table
 
-Lets take a look again at the results from the basic case.
+Here are the results from the basic case.
+
 ```{r}
 res <- ActivePathways(scores, gmt.file)
 res
 ```
-The `term.id`, `term.name`, and `term.size` column give information about each pathway. The `p.val` column gives the adjusted p-value for each column indicating the confidence that the pathway is enriched. Since the `return.all` options is `FALSE` by default, all of these p-values will be smaller than the default significance cutoff, 0.05, and the table contains only the pathways that were found to be significant enriched. 
 
-The `overlap` column gives the intersection between the genes annotated to the term and the subset of the `genelist` that gave us this p.value.
+The `term.id`, `term.name`, and `term.size` column give the identifier, name and number of genes in each pathway or pathway. The `adjusted.p.val` column gives the adjusted p-value for each pathway indicating the confidence that the pathway is enriched. If the `return.all` option is `FALSE`, all of these p-values will be smaller than the significance threshold, 0.05, and the table contains only the pathways that were found to be significantly enriched. 
+
+The `overlap` column gives the intersection between the genes annotated to the term and the subset of genes in the merged gene list that returned this p-value.
+
 ```{r}
 res$overlap[1:3]
 ```
-The overlaps are in the same order as the `genelist`, meaning that the most significant genes from `scores` are placed first. This column is very useful in further analysis on the data, going back from pathway space to gene space and identifying significant genes in each pathway.
 
-The `evidence` column gives the individual gene lists in `scores` in which the pathway is found to be enriched. For example, the majority of the pathways have only 'CDS' as their evidence, meaning that the pathway is enriched either in this column or in the combined data. Pathway `REAC:422475` has as evidence `list('X3UTR', 'promCore')`, which means that the pathway is found to be enriched when considering either the `X3UTR` column, the `promCore` column, or the combined data. If a pathway is found to be enriched only with the combined data and not in any individual column, 'combined' will be listed as the evidence. If a pathway is not found to be enriched in any individual column or in the combined data (only possible if `return.all==TRUE`) then the evidence will be 'none'.  
+The overlaps are in the same order as the merged gene list, meaning that more significant genes from `scores` are ranked higher, allowing the user to return to the gene space and identify significant genes in each pathway.
 
-The rest of the columns are named as `Genes_{column}`, and represent the overlaps of each individual column if a pathway is found to be enriched according only to that gene list. Otherwise the column is `NA`.
+The `evidence` column gives the names of columns (sources of evidence) in `scores` in which a given pathway is found to be enriched. For example, the majority of the pathways in this example have 'CDS' as the only evidence, meaning that the pathway is enriched in this column (and in the combined data). Pathway `REAC:422475` has as evidence `list('X3UTR', 'promCore')`, which means that the pathway is found to be enriched when considering the `X3UTR` column, the `promCore` column, and the combined data. If a pathway is found to be enriched only in the combined data and not in any individual column, 'combined' will be listed as the evidence. If a pathway is not found to be enriched in any individual column or in the combined data (only possible if `return.all==TRUE`), then the evidence will be 'none'.  
+
+The rest of the columns are named as `Genes_{column}`, and represent the gene overlaps of each individual column if a pathway is found to be enriched using the p-values from that column. Otherwise the column is `NA`.
 
 ### Writing results to file
-The results are returned as a `data.table`, but since the overlap column is a list it adds some challenges to writing the table to a file, should you need to. The usual `write.table` and `write.csv` functions will struggle with this column unless you manually transform the list into a string. Fortunately, `data.table`'s `fwrite` function is smart enough to handle the complex structure
+The results are returned as a `data.table`, but since the overlap column is a list, it can be a challenge to write the table to a file. The usual `write.table` and `write.csv` functions will struggle with this column unless the user manually transforms the list into a string. Fortunately, `data.table`'s `fwrite` function is smart enough to handle the complex structure.
 
 ```{r}
 result.file <- paste(system.file('extdata', package='ActivePathways'), 'example_write.csv', sep='/')
@@ -170,11 +173,8 @@ data.table::fwrite(res, result.file)
 knitr::kable(read.csv(result.file)[1:3, 1:4], caption = "Write results as csv file using data.table::fwrite - first 4 columns shown here")
 ```
 
-However, `data.table::fread` isn't quite smart enough to get the table back from the file, so you will have to do a little more work to turn the overlap column from a string to a list if you want to read the results from a file.
-
-
 # Visualizing the Results in Cytoscape
-The Cytoscape program, combined with the enrichmentMap app, provide a powerful tool to visualize pathway enrichment analysis as a network. `ActivePathways` can help speed up this process by automatically writing the files that will be uploaded to Cytoscape to create a map. To create these files, a file directory must be supplied to `ActivePathways` using the parameter `cytoscape.file.dir`. If the user plans on reanalyzing the same data with changes to the parameters, the parameter `reanalyze` can be set to `TRUE` and subdirectories of the form `Version1A`, `Version1B`, etc will be created in the `cytoscape.file.dir` to ensure that each version of the analysis is stored. 
+The Cytoscape program, combined with the EnrichmentMap app, provides a powerful tool to visualize pathway enrichment analysis as a network. `ActivePathways` can help speed up this process by automatically writing the files that can be uploaded to Cytoscape to create a network. To create these files, a file directory must be supplied to `ActivePathways` using the parameter `cytoscape.file.dir`. If the user plans on reanalyzing the same data with changes to the parameters, the parameter `reanalyze` can be set to `TRUE` and subdirectories of the form `Version1A`, `Version1B`, etc will be created in the `cytoscape.file.dir` to ensure that each version of the analysis is stored. 
 
 ```{r}
 
@@ -182,18 +182,18 @@ res <- ActivePathways(scores, gmt.file, cytoscape.file.dir = system.file('extdat
 ```
 Four files are written:
 
-* `pathways.txt` contains the list of significant terms and the associated p-values. Note that only terms with `p.val <= significant` are written, even if you use the option `return.all=TRUE`.
+* `pathways.txt` contains the list of significant pathways and the associated p-values. Note that only terms with `p.val <= significant` are written, even if the option `return.all=TRUE` is specified.
 
-* `subgroups.txt` contains a matrix indicating which columns the pathways are significant in. A 1 indicates that that pathway is significant if `ActivePathways` is run on the data in just that one column. Note that this isn't the same as the column contribution. However, this file will be skipped if you use the option `contribution=FALSE`, since the assumption is that the individual columns aren't of interest.
+* `subgroups.txt` contains a matrix indicating the columns of the original scores matrix which contributed signficant pathways. A 1 indicates that the pathway is significant if `ActivePathways` is run on the p-values in that column.
 
-* `pathways.gmt` contains a shortened version of the supplied GMT file which consists of only the significant pathways. You don't have to use this file, but it helps speed up the process of creating the network inside Cytoscape.
+* `pathways.gmt` contains a shortened version of the supplied GMT file which consists of only the significant pathways. This file can accelerate process of creating the network using Cytoscape.
 
-* `legend.pdf` a pdf file of a legend which can be used as reference to the generated cytoscape plot.
+* `legend.pdf` a pdf file of a legend which can be used as reference to the generated Cytoscape network.
 
 ```{r}
 files <- paste(system.file('extdata', package='ActivePathways'), 
                c('pathways.txt', 
-                 'subgroups.txt', 
+                 'subgroups.txt',
                  'pathways.gmt', 
                  'legend.pdf'), 
                sep='/')
@@ -205,4 +205,4 @@ cat(paste(readLines(files[3])[1], collapse='\n'))
 
 ![](legend.jpg)
 
-To see how to use these files to create an enrichment map, take a look at the `enrichmentMap-vignette` included with this package.
+To learn how to use these files to create an enrichment map, take a look at the `enrichmentMap-vignette` included in this package.
